--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="child"></div>
 
     <div class="child1">
-      <h5 style="color: #c8ccce;">search</h5>
+      <h5 style="color: #c8ccce;">Search</h5>
     </div>
 
     <div class="child2"></div>
